validate write